style.css
*{
    margin: 0;
    padding: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

:root {
    --primary-color: #ffff;
    --navigation-color: #12497e;
    --titles-color: #2182dd;
    --titles-line-color: #670ae0;
    --general-text-color: #ffff;
    --footer-color: #0a3964;
    --main-text-color: #000000;
}

.dark-mode {
    --primary-color: #121212;
    --navigation-color: #270082;
    --titles-color: #7A0BC0;
    --titles-line-color: #7743DB;
    --general-text-color: #ffff;
    --footer-color: #3F0071;
    --main-text-color: #ffff;
}

.page {
    height: 100%;
    font-size: 14px;
}

/* Body */
.page-body {
    max-width: 1280px;
    margin: 0 auto;
    background-color: var(--primary-color);
    transition: .3s all;
}

/* Header */
.page-header__inner {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    background-color: var(--navigation-color);
}

.swicher {
    transition: .2s ease-in-out;
}

.switcher:hover {
    cursor: pointer;
}

/* Header Navigation Links */

.page-header__navigation {
    display: block;
}

.page-navigation {
    display: flex;
    list-style-type: none;
    align-items: center;
}

.page-navigation__item {
    position: relative;
    padding: 10px;
    overflow: hidden;
    margin: 0 15px;
}
/* Navigation Animation */
.page-navigation__link {
    position: relative;
    padding: 15px;
    text-decoration: none;
    font-size: 25px;
    color: var(--general-text-color);
    background-color: transparent;
    background-repeat: no-repeat;
    transition: .3s ease-in-out;
    overflow: hidden;
    z-index: 1;
}

.page-navigation__link::before {
    position: absolute;
    content: "";
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #ffff;
    transition: .2s ease-in-out;
    transform: translateY(-100%);
    z-index: -1;
}

.page-navigation__link:hover::before{
    transform: translateX(0);
}

.page-navigation__link:hover {
    color: black;
}

/* Left Panel Main */
.main {
    display: grid;
    grid-template-columns: 30% 70%;
    color: var(--main-text-color);
}

/* Left Panel */

.photo {
    max-width: 100%;
    height: auto;
    vertical-align:top;
    filter: drop-shadow(0px 0px 10px gray);
}

.contacts-icon {
    vertical-align: middle;
    width: 32px;
    height: 32px;
}

.left-panel {
    height: 100%;
    background-color: var(--navigation-color);
    color: #ffff;
}

.left-panel-section {
    padding: 20px 0;
}

.left-section-title {
    position: relative;
    font-size: 32px;
    background-color: var(--titles-color);
    padding-left: 40px;
    margin-bottom: 20px;
}

.left-section-title::before {
    content: "";
    left: 0;
    top: 0;
    position: absolute;
    width: 20px;
    height: 43px;
    background-color: var(--titles-line-color);
}

.left-panel-section ul {
    list-style-type: none;
    margin: 0 45px;
    margin-bottom: 40px;
    font-size: 18px;
}

.left-panel-section ul li {
    margin-bottom: 23px;
}

/* Right Panel */

.page-title {
    padding: 50px;
}

.main-title {
    font-size: 50px;
    text-align: center;
}

.right-section-title {
    font-size: 32px;
    position: relative;
    background-color: var(--titles-color);
    padding-left: 40px;
    margin-bottom: 50px;
    color: var(--general-text-color);
}

.right-section-title::before {
    position: absolute;
    left: 0;
    top: 0;
    content: "";
    width: 20px;
    height: 43px;
    background-color: var(--titles-line-color);
}

.right-panel-section p{
    margin: 0 45px;
    margin-bottom: 100px;
    font-size: 18px;
}

.right-panel-section ul {
    margin: 0 45px;
    margin-bottom: 40px;
    font-size: 18px;
}

.right-panel-section ul li {
    margin-bottom: 10px;
}

.skills-icon {
    width: 32px;
    height: 32px;
    vertical-align: middle;
}

/* Code Example */

.right-panel-section .code-paragraph {
    margin-bottom: 0;
}

.code-example {
    border: 1px solid gray;
}

.code-example {
    display: flex;
    margin: 25px 45px;
    align-items: center;
    justify-content: start;
    background-color: #1A1A40;
}

.code-example code .variable {
    font-weight: 700;
    color: #8a2be2;
}

.code-example code .method {
    font-weight: 700;
    color: #eb3110;
}

/* Footer */

.page-footer {
    display: grid;
    grid-template-columns: 33% 34% 33%;
    padding: 25px;
    background-color: var(--footer-color);
    align-items: center;
}

.footer-icon {
    width: 32px;
    height: 32px;
    vertical-align: middle;
}

.footer-link {
    text-align: center;
    color: var(--general-text-color);
    text-decoration: underline;
    font-size: 20px;
}

.footer-link:hover {
    text-decoration: none;
}

.footer-icon-rs {
    width: 86px;
    height: auto;
}

.page-footer p{
    color: var(--general-text-color);
    font-size: 20px;
    text-align: center;
}

@media (max-width: 1000px) {
    .main {
        display: flex;
        flex-wrap: wrap;
    }
    
    .page-navigation  {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
    }

    .switcher {
        align-content: center;
    }
}

